src/riot-rs-macros/tests/ui/main/misspelled_hooks_param.stderr
error: unsupported parameter (`hooks` is supported)
  --> tests/ui/main/misspelled_hooks_param.rs:13:17
   |
13 | #[riot_rs::main(hooooks(usb_builder))]
   |                 ^^^^^^^
